--- a/app/src/main/res/layout/view_bottom_nav.xml
+++ b/app/src/main/res/layout/view_bottom_nav.xml
@@ -2,13 +2,15 @@
     android:id="@+id/bottomNav"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+
+    android:padding="10dp"
     android:orientation="horizontal"
     android:gravity="center"
-    android:background="#1DAA89">
+    android:background="@drawable/bg_bottom_nav">
 
     <!-- Пример элемента -->
     <LinearLayout
-        android:id="@+id/navParams"
+        android:id="@+id/navDashBoard"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -16,85 +18,62 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/iconParams"
+            android:id="@+id/iconDashboard"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/params"/>
+            android:src="@drawable/icon_dashboard" />
 
         <TextView
             android:id="@+id/textParams"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Params"
+            android:text="Dashboard"
             android:textColor="#FFFFFF"
             android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/navPlan"
+        android:id="@+id/navEvent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/iconPlan"
+            android:id="@+id/iconEvent"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/plan"/>
+            android:src="@drawable/icon_event" />
 
         <TextView
             android:id="@+id/textPlan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Plan"
+            android:text="Events"
             android:textColor="#FFFFFF"
             android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/navRun"
+        android:id="@+id/navTeams"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/iconRun"
+            android:id="@+id/iconTeams"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/start" />
+            android:src="@drawable/icon_team" />
 
         <TextView
             android:id="@+id/textRun"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/navStat"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center">
-
-        <ImageView
-            android:id="@+id/iconStat"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/statistic"/>
-
-        <TextView
-            android:id="@+id/textStat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Statistic"
+            android:text="Teams"
             android:textColor="#FFFFFF"
             android:textSize="12sp" />
     </LinearLayout>
@@ -104,8 +83,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iconSet"
