--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -36,8 +36,8 @@
         android:id="@+id/sliderDots1"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="10dp"
         app:layout_constraintTop_toBottomOf="@id/imageSlider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +137,7 @@
             android:layout_width="180dp"
             android:layout_height="185dp"
             android:layout_margin="8dp"
-            app:cardCornerRadius="12dp"
+            app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
 
             <FrameLayout
@@ -193,7 +193,7 @@
             android:layout_width="180dp"
             android:layout_height="185dp"
             android:layout_margin="8dp"
-            app:cardCornerRadius="12dp"
+            app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
 
             <FrameLayout
@@ -249,7 +249,7 @@
             android:layout_width="180dp"
             android:layout_height="185dp"
             android:layout_margin="8dp"
-            app:cardCornerRadius="12dp"
+            app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
 
             <FrameLayout
@@ -305,7 +305,7 @@
             android:layout_width="180dp"
             android:layout_height="185dp"
             android:layout_margin="8dp"
-            app:cardCornerRadius="12dp"
+            app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
 
             <FrameLayout
