--- a/app/src/main/res/layout/fragment_all_events.xml
+++ b/app/src/main/res/layout/fragment_all_events.xml
@@ -7,14 +7,42 @@
     android:background="#0B0F2A"
     android:padding="16dp">
 
+    <!-- Верхняя часть с заголовком и кнопкой назад -->
+    <LinearLayout
+        android:id="@+id/headerLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="All My Events"
+            android:textSize="24sp"
+            android:textColor="@android:color/white"
+            android:layout_marginBottom="5dp" />
+
+        <ImageView
+            android:id="@+id/backButton"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:src="@drawable/ic_arrow_back"
+            android:layout_marginBottom="5dp" />
+    </LinearLayout>
+
+    <!-- RecyclerView под заголовком -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerAllEvents"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:paddingBottom="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/headerLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
