--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -1,41 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
-    android:backgroundTint="#1A2239"
-    app:cardCornerRadius="12dp">
+    android:layout_width="match_parent"
+    android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_event_card"
+    android:padding="16dp"
+    android:layout_marginBottom="12dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <!-- Название события -->
+    <TextView
+        android:id="@+id/itemTitle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:text="Tournament"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iconsLayout"
+        android:maxLines="1"
+        android:ellipsize="end" />
 
-        <TextView
-            android:id="@+id/itemTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Race Cup"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:textSize="18sp" />
+    <!-- Дата -->
+    <TextView
+        android:id="@+id/itemDate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="02/08/2025"
+        android:textColor="#B0B3C7"
+        android:textSize="18sp"
+        android:drawableStart="@drawable/i_calendar"
+        android:drawablePadding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/itemTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iconsLayout"
+        android:layout_marginTop="6dp" />
 
-        <TextView
-            android:id="@+id/itemDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="📅 01/08/2025"
-            android:textColor="#CCCCCC"
-            android:layout_marginTop="4dp"/>
+    <!-- Время -->
+    <TextView
+        android:id="@+id/itemTime"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="18:00"
+        android:textColor="#B0B3C7"
+        android:textSize="18sp"
+        android:drawablePadding="10dp"
+        app:drawableStartCompat="@drawable/i_clock"
+        app:layout_constraintTop_toBottomOf="@id/itemDate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iconsLayout"
+        android:layout_marginTop="6dp" />
 
-        <TextView
-            android:id="@+id/itemMode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Drone • Time Trial"
-            android:textColor="#BBBBBB"
-            android:layout_marginTop="2dp"/>
+    <!-- Категория -->
+    <TextView
+        android:id="@+id/itemMode"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="FPS"
+        android:textColor="#B0B3C7"
+        android:textSize="18sp"
+        android:drawablePadding="10dp"
+        app:drawableStartCompat="@drawable/i_mode"
+        app:layout_constraintTop_toBottomOf="@id/itemTime"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iconsLayout"
+        android:layout_marginTop="6dp" />
+
+    <!-- Режим -->
+    <TextView
+        android:id="@+id/itemCategory"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Solo"
+        android:textColor="#B0B3C7"
+        android:textSize="18sp"
+        android:drawablePadding="10dp"
+        app:drawableStartCompat="@drawable/i_category"
+        app:layout_constraintTop_toBottomOf="@id/itemMode"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iconsLayout"
+        android:layout_marginTop="6dp" />
+
+    <!-- Участники -->
+    <TextView
+        android:id="@+id/itemPlayers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="16"
+        android:textColor="#B0B3C7"
+        android:textSize="18sp"
+        android:drawablePadding="10dp"
+        app:drawableStartCompat="@drawable/i_parti"
+        app:layout_constraintTop_toBottomOf="@id/itemCategory"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="6dp" />
+
+    <!-- Иконки справа -->
+    <LinearLayout
+        android:id="@+id/iconsLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:id="@+id/iconView"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_search"
+            android:contentDescription="View"
+            app:tint="@android:color/white"/>
+
+        <ImageView
+            android:id="@+id/iconDelete"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_delete"
+            android:contentDescription="Delete"
+            app:tint="@android:color/white"/>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
