--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="custom_date_picker_header_color">#1A2239</color>
+    <color name="custom_date_picker_main_color">#203350</color>
 </resources>
