--- a/app/src/main/res/layout/fragment_result_details.xml
+++ b/app/src/main/res/layout/fragment_result_details.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:text="Live Control Panel"
+            android:text="Event Results"
             android:textColor="@android:color/white"
             android:textSize="24sp" />
 
